@@ -1,6 +1,8 @@
 Change history for AnyEvent-Inotify-Simple
 
 {{$NEXT}}
+  - handle new file disappearing quickly while we're checking to see if its a
+    directory and needs to be watched
   - silenced occasional warnings at destruction
   - fixed tests
   - converted to dzil
